# MouseClicks

./: CMakeLists.txt  README.md  main.cpp  mainwindow.h  mainwindow.ui
source/: mainwindow.cpp
